--- a/styles/components/list.styl
+++ b/styles/components/list.styl
@@ -15,7 +15,7 @@
         margin-top 30px
 
     &--bottom-spaced
-        padding-bottom: 80px;
+        padding-bottom 84px
     
     &--dividers .list__text
         border-bottom 1px solid color-list-divider
